# bluealsa-autoconfig

./: .gitignore  21-bluealsa-autoconfig.conf  21-bluealsa-autoconfig.conf.in  LICENSE  README.md  agent.c  alsa.c  alsa.h  autoconfig-filepaths.h  autoconfig.c  bluealsa-agent.8.rst.in  bluealsa-agent.service.in  bluealsa-autoconfig.8.rst  bluealsa-autoconfig.8.rst.in  bluealsa-autoconfig.service.in  bluealsa-client.c  bluealsa-client.h  bluealsa-hook.c  completion  default-devices.conf  meson.build  meson_options.txt  namehint.c  namehint.h  systemd-integration.md
bluez-alsa/: README.md  meson.build
bluez-alsa/shared/: dbus-client-pcm.c
examples/: 51-notify.sh  52-mpd.bash  examples.md
examples/handsfree/: 53-handsfree.bash  54-handsfree.bash  handsfree.bash  hf-hs@.service
examples/pulseaudio/: pulseaudio.bash
systemd/: bluealsa-agent.service.in  bluealsa-autoconfig.service.in  meson.build
systemd/system/: meson.build
systemd/user/: meson.build
